WindGroup Dev/src/objects/Goods_Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Vendor_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Goods Receipts</relationshipLabel>
        <relationshipName>Goods_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DO_No__c</fullName>
        <inlineHelpText>Delivery Order Number</inlineHelpText>
        <label>DO No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GR_Amount__c</fullName>
        <inlineHelpText>From Related GR Line Items: Total Amount</inlineHelpText>
        <label>GR Amount</label>
        <summarizedField>GR_Line_Item__c.Total_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>GR_Line_Item__c.Void__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>GR_Line_Item__c.Goods_Receipt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GR_Date__c</fullName>
        <label>GR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GR_Quantity__c</fullName>
        <inlineHelpText>From Related GR Line Items: Quantity</inlineHelpText>
        <label>GR Quantity</label>
        <summarizedField>GR_Line_Item__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>GR_Line_Item__c.Void__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>GR_Line_Item__c.Goods_Receipt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>PO No.</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Goods Receipts</relationshipLabel>
        <relationshipName>Goods_Receipts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>GR_Amount__c *  Purchase_Order__r.Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GR Amount * PO: Tax Rate</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Goods Receipts</relationshipLabel>
        <relationshipName>Goods_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Goods Receipt</label>
    <nameField>
        <label>Goods Receipt No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goods Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Create_if_PO_status_is_issued</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Purchase_Order__r.Status__c,&apos;Issued&apos;)),ISNEW())</errorConditionFormula>
        <errorDisplayField>Contact_Name__c</errorDisplayField>
        <errorMessage>Goods Receipt can only be created if Purchase Order Status is Issued</errorMessage>
    </validationRules>
</CustomObject>